chore: update github token

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Publish
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
