--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Build
         run: npm run build
       - name: Publish
-        run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "@milton-cazoo:registry=https://npm.pkg.github.com/">.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}">>.npmrc
+
+          npm publish
